--- a/recipes/style2.css
+++ b/recipes/style2.css
@@ -56,6 +56,7 @@ body
     box-shadow:10px 10px 5px rgb(167, 73, 73);
 }
 
+/* Recipe description style  */
 .recipe-description{
     background-color: rgba(58, 37, 107, 0.5);
     padding: 10px;
@@ -66,12 +67,12 @@ body
     font-family:Arial, Helvetica, sans-serif;
     color:rgb(255, 191, 223);
 }
-
+ 
 .recipe-description h2{
     font-size:40px;
     text-align: center;
 }
-
+ /* adding home button  */
 .recipe-description .material-symbols-outlined{
     color:rgb(255, 191, 223);
 }
